Add additional language tests

--- a/src/helper/Lang.properties
+++ b/src/helper/Lang.properties
@@ -1,3 +1,9 @@
-#A resource bundle for the french language.
+#A resource bundle for the default english language.
 Username=Username
 Password=Password
+Login=Login
+Exit=Exit
+Application\ Manager=Application\ Manager
+Application\ Manager\ Login=Application\ Manager\ Login
+Locale=Locale
+The\ username\ and/or\ password\ do\ not\ match.=The\ username\ and/or\ password\ do\ not\ match.
