--- a/src/helper/Lang.properties
+++ b/src/helper/Lang.properties
@@ -3,7 +3,7 @@ Username=Username
 Password=Password
 Login=Login
 Exit=Exit
-Application\ Manager=Application\ Manager
-Application\ Manager\ Login=Application\ Manager\ Login
+Appointment\ Manager=Appointment\ Manager
+Appointment\ Manager\ Login=Appointment\ Manager\ Login
 Locale=Locale
 The\ username\ and/or\ password\ do\ not\ match.=The\ username\ and/or\ password\ do\ not\ match.
