Fix Login UI to use location instead of locale

--- a/src/helper/Lang.properties
+++ b/src/helper/Lang.properties
@@ -5,5 +5,5 @@ Login=Login
 Exit=Exit
 Appointment\ Manager=Appointment\ Manager
 Appointment\ Manager\ Login=Appointment\ Manager\ Login
-Locale=Locale
+Location=Location
 The\ username\ and/or\ password\ do\ not\ match.=The\ username\ and/or\ password\ do\ not\ match.
