Change login error message in controller to make more sense

--- a/src/helper/Lang.properties
+++ b/src/helper/Lang.properties
@@ -6,4 +6,4 @@ Exit=Exit
 Appointment\ Manager=Appointment\ Manager
 Appointment\ Manager\ Login=Appointment\ Manager\ Login
 Location=Location
-The\ username\ and/or\ password\ do\ not\ match.=The\ username\ and/or\ password\ do\ not\ match.
+The\ username\ and/or\ password\ is\ incorrect.=The\ username\ and/or\ password\ is\ incorrect.
