Add ability to generate report for total customers form

--- a/src/helper/Lang.properties
+++ b/src/helper/Lang.properties
@@ -7,3 +7,9 @@ Appointment\ Manager=Appointment\ Manager
 Appointment\ Manager\ Login=Appointment\ Manager\ Login
 Location=Location
 The\ username\ and/or\ password\ is\ incorrect.=The\ username\ and/or\ password\ is\ incorrect.
+Upcoming\ Appointment=Upcoming\ Appointment
+You\ have\ an\ upcoming\ appointment.\ Here\ are\ the\ details=You\ have\ an\ upcoming\ appointment.\ Here\ are\ the\ details
+You\ have\ no\ upcoming\ appointments.=You\ have\ no\ upcoming\ appointments.
+Appointment\ ID=Appointment\ ID
+on=on
+at=at
